# fsm_gen

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md  ex1.yaml  fsm_gen  mkdocs.yaml  pyproject.toml  requirements.txt
ch32v003_example/: Makefile  config.c  config.h  encoder.c  error_codes.h  example.c  main_mode.fsm  motor.fsm  protocol.c  system_state.c  system_state.h  timer.c  timer.fsm  timer.h  tm1637.c  tm1637.fsm  tm1637.h  tm1637_i2c.fsm  uart.h
cli/: main.py
docs/: README.md  plans.md  research.md
docs/ch32v003_example/: config.h  display.fsm  encoder.h  main.c  menu_cfg.fsm  menu_mode.fsm  protocol.h  systick.c  systick.h  timer.fsm  uart.c
pyfsm/: parser.py
